[package]
name = "game2d"
version = "0.1.0"
edition = "2018"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
ggrs = "0.9.1"
bevy = "0.7"
bevy_ggrs = "0.9.0"
bytemuck = { version = "1.7", features=["derive"]}
matchbox_socket = { version = "0.3", features = ["ggrs-socket"] }

[patch.crates-io]
matchbox_socket = { git = "https://github.com/johanhelsing/matchbox", rev = "b00002da1442396b8ce0babaf6d119c76b33f8d5" }
ggrs = { git = "https://github.com/gschup/ggrs?rev=9e4a20a6317cfdcff9c352e6f2a37feb33576e54"}
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", rev = "928376df6b37f391ef6593e0355ba5a737ec1492" }


[patch.'https://github.com/gschup/ggrs']
ggrs = { git = "https://github.com/gschup/ggrs?rev=9e4a20a6317cfdcff9c352e6f2a37feb33576e54" }